--- a/sb-init.org
+++ b/sb-init.org
@@ -718,6 +718,17 @@ This is potentially risky!
   (setq org-confirm-babel-evaluate nil)
 #+END_SRC
 
+** Formatting of times
+:LOGBOOK:
+CLOCK: [2017-12-11 Mon 08:00]
+:END:
+
+By default, total times are printed in days, hours and minutes in clock-tables. This can be changed as follows
+
+#+BEGIN_SRC emacs-lisp
+  (setq org-duration-format (quote ((special . h:mm))))
+#+END_SRC
+
 ** Hacking
 
 *** Dynamic blocks
