--- a/sb-init.org
+++ b/sb-init.org
@@ -1155,6 +1155,7 @@ straightforward.
 
 ** Python
 :LOGBOOK:
+CLOCK: [2018-01-30 Tue 08:00]--[2018-01-30 Tue 08:45] =>  0:45
 CLOCK: [2016-11-17 Thu 07:35]--[2016-11-17 Thu 07:50] =>  0:15
 CLOCK: [2016-08-24 Wed 07:55]--[2016-08-24 Wed 08:25] =>  0:30
 CLOCK: [2014-08-07 Thu 13:55]--[2014-08-07 Thu 15:00] =>  1:05
