--- a/sb-init.org
+++ b/sb-init.org
@@ -268,7 +268,8 @@ Various repositories are configured.
   (setq package-archives '(("gnu" . "http://elpa.gnu.org/packages/")
                            ("melpa" . "http://melpa.org/packages/")
                            ("melpa-stable" . "http://stable.melpa.org/packages/")
-                           ("elpy" . "http://jorgenschaefer.github.io/packages/")))
+                           ("elpy" . "http://jorgenschaefer.github.io/packages/")
+                           ("org" . "https://orgmode.org/elpa/")))
   (package-initialize)
 #+END_SRC
 
