--- a/sb-init.org
+++ b/sb-init.org
@@ -41,10 +41,6 @@
 
   ; Remember to configure proxy if necessary
   (custom-add-to-group 'sb 'url-proxy-services 'custom-variable)
-
-  (load-theme 'spacemacs-dark)
-  (setq spacemacs-theme-org-height nil)
-  (set-face-font 'default "Liberation Mono")
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -65,6 +61,15 @@
   (unless (package-installed-p 'use-package) (package-install 'use-package))
   (require 'use-package)
   (setq use-package-always-ensure t)
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (use-package spacemacs-dark
+    :config
+    (load-theme 'spacemacs-dark)
+    (setq spacemacs-theme-org-height nil))
+
+  (set-face-font 'default "Liberation Mono")
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
