--- a/sb-init.org
+++ b/sb-init.org
@@ -55,17 +55,13 @@
           ("elpy" . "http://jorgenschaefer.github.io/packages/")
           ("org" . "https://orgmode.org/elpa/")))
   (package-initialize)
+
+  (defun sb-package-install-unless-installed (pkg)
+    (unless (package-installed-p pkg) (package-install pkg)))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
-  (unless (package-installed-p 'use-package) (package-install 'use-package))
-  (require 'use-package)
-  (setq use-package-always-ensure t)
-#+END_SRC
-
-#+BEGIN_SRC emacs-lisp
-  (use-package spacemacs-theme)
-
+  (sb-package-install-unless-installed 'spacemacs-theme)
   (setq spacemacs-theme-org-height nil)
   (load-theme 'spacemacs-dark)
 
