--- a/sb-init.org
+++ b/sb-init.org
@@ -9,19 +9,19 @@
   ;; ===========================
   ;;
   (setq column-number-mode t
-        confirm-nonexistent-file-or-buffer t
-        delete-active-region nil
-        dnd-open-file-other-window nil
-        find-file-run-dired nil
-        indent-tabs-mode nil
-        inhibit-startup-screen t
-        initial-frame-alist '((top . 0) (left . 0))
-        make-backup-files nil
-        ps-paper-type (quote a4)
-        safe-local-variable-values (quote ((buffer-auto-save-file-name)
-                                           (org-confirm-babel-evaluate)))
-        show-paren-style (quote expression)
-        visible-bell t)
+	confirm-nonexistent-file-or-buffer t
+	delete-active-region nil
+	dnd-open-file-other-window nil
+	find-file-run-dired nil
+	indent-tabs-mode nil
+	inhibit-startup-screen t
+	initial-frame-alist '((top . 0) (left . 0))
+	make-backup-files nil
+	ps-paper-type (quote a4)
+	safe-local-variable-values (quote ((buffer-auto-save-file-name)
+					   (org-confirm-babel-evaluate)))
+	show-paren-style (quote expression)
+	visible-bell t)
   ;;(setq-default buffer-file-coding-system 'utf-8)
 
   (global-auto-revert-mode)
@@ -33,10 +33,19 @@
 
   (global-unset-key (kbd "<C-next>"))
   (global-unset-key (kbd "<C-prior>"))
-#+END_SRC
 
-#+BEGIN_SRC emacs-lisp
-  (defgroup sb nil "My customization group" :tag "sb")
+
+  ;; Definition of my own customization group
+  ;; ----------------------------------------
+  ;;
+  (defgroup sb nil
+    "My customization group.
+
+  Gathers platform-dependent custom variables (both built-in and
+  user-defined) that are required by my setup. These custom variables
+  should be set at each new fresh install (but sensible defaults are
+  defined)."
+    :tag "sb")
 
   (defcustom sb-path-to-local-documents "~/Documents"
     "Path to the documents directory.
@@ -72,6 +81,9 @@
 
   ; Remember to configure proxy if necessary
   (custom-add-to-group 'sb 'url-proxy-services 'custom-variable)
+
+  (custom-add-to-group 'sb 'python-shell-interpreter-args 'custom-variable)
+  (custom-add-to-group 'sb 'python-shell-interpreter-interactive-arg 'custom-variable)
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -1050,13 +1062,6 @@ I use Jorgen Schäfer's [[https://github.com/jorgenschaefer/elpy][elpy]] package
                              elpy-module-sane-defaults)))
   (setq elpy-test-runner (quote elpy-test-test-discover-runner))
   (add-hook 'elpy-mode-hook 'whitespace-mode)
-#+END_SRC
-
-It may be useful to set some other =elpy= variables. Since their value is platform dependent, I simply add them as a reminder to the "sb" =customize-group=.
-
-#+BEGIN_SRC emacs-lisp
-  (custom-add-to-group 'sb 'python-shell-interpreter-args 'custom-variable)
-  (custom-add-to-group 'sb 'python-shell-interpreter-interactive-arg 'custom-variable)
 #+END_SRC
 
 *** Other references
