--- a/sb-init.org
+++ b/sb-init.org
@@ -10,6 +10,7 @@
   ;;
   (setq column-number-mode t
 	confirm-nonexistent-file-or-buffer t
+	default-input-method 'rfc1345
 	delete-active-region nil
 	dnd-open-file-other-window nil
 	find-file-run-dired nil
@@ -36,6 +37,26 @@
 
   ;; This is required for M-x package-list-packages to work properly
   (prefer-coding-system 'utf-8)
+
+  ;; Useful functions
+  ;; ----------------
+
+  (defun sb-activate-default-input-method ()
+    "Activate the default input method.
+
+  Can be used as a hook."
+    (activate-input-method default-input-method))
+
+  (defun sb-bind-newline-and-indent-to-RET ()
+    "Bind newline-and-indent to RET.
+
+  This function can be used as a hook."
+    (local-set-key (kbd "RET") 'newline-and-indent))
+
+  (defun sb-load-file-when-exists (filename)
+    "Load specified file if it exists. Do nothing otherwise."
+    (when (file-exists-p filename) (load-file filename)))
+
 
   ;; Definition of my own customization group
   ;; ----------------------------------------
@@ -118,57 +139,8 @@
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
-  ; input-method conflicts with key-chord, which I do not use
-  (setq default-input-method 'rfc1345)
-  (defun sb-activate-input-method ()
-    (activate-input-method default-input-method))
   (add-hook 'text-mode-hook 'sb-activate-input-method)
   (add-hook 'org-mode-hook 'sb-activate-input-method)
-#+END_SRC
-
-* Functions and variables to be used in this file
-:LOGBOOK:
-CLOCK: [2016-09-15 Thu 07:28]--[2016-09-15 Thu 07:46] =>  0:18
-CLOCK: [2016-09-05 Mon 08:15]--[2016-09-05 Mon 08:30] =>  0:15
-CLOCK: [2016-08-23 Tue 07:45]--[2016-08-23 Tue 07:50] =>  0:05
-:END:
-
-
-** Load a file only when it exists
-
-#+BEGIN_SRC emacs-lisp
-  (defun sb-load-file-when-exists (filename)
-    "Load specified file if it exists. Do nothing otherwise."
-    (when (file-exists-p filename) (load-file filename)))
-#+END_SRC
-
-** Toggle window dedication
-
-See [[http://stackoverflow.com/questions/5151620/how-do-i-make-this-emacs-frame-keep-its-buffer-and-not-get-resized][stack overflow]]
-
-#+BEGIN_SRC emacs-lisp
-  (defun sb-toggle-window-dedicated ()
-    "Toggle whether the current active window is dedicated or not."
-    (interactive)
-    (message
-     (if (let (window (get-buffer-window (current-buffer)))
-           (set-window-dedicated-p window
-                                   (not (window-dedicated-p window))))
-         "Window '%s' is dedicated"
-       "Window '%s' is normal")
-     (current-buffer)))
-#+END_SRC
-
-** Bind newline and indent to RET
-
-In programming mode, it can be inconvenient to use =C-j= to call =newline-and-indent=. The following function is not necessary with Python (when using elpy-mode).
-
-#+BEGIN_SRC emacs-lisp
-  (defun sb-bind-newline-and-indent-to-RET ()
-    "Bind newline-and-indent to RET.
-
-  This function can be used as a hook."
-    (local-set-key (kbd "RET") 'newline-and-indent))
 #+END_SRC
 
 * Platform dependent settings
